redactable/tests/ui/sensitive_dual_without_display_rejected.stderr
error: `#[sensitive(dual)]` is no longer accepted on `Sensitive` or `SensitiveDisplay`; use `#[derive(SensitiveDual)]` instead
  --> tests/ui/sensitive_dual_without_display_rejected.rs:16:8
   |
16 | struct ApiKey(#[sensitive(redactable::Token)] String);
   |        ^^^^^^
